src/test/test-models/good/vec-expr/index_expr.stan
functions {
  void foo(int N) {
    real res[10];
    res[ 1 : 10 ] = 3;
    }
  }
}
model {}
